After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768500 - The sources of remote collections are not shown in OrganizeCollectionView
The sources of remote collections are not shown in OrganizeCollectionView
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.20.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-07-07 07:23 UTC by Debarshi Ray
Modified: 2016-07-07 21:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
organize-collection-view: Fix typo (1.98 KB, patch)
2016-07-07 07:30 UTC, Debarshi Ray
committed Details | Review
organize-collection-view: Don't mark local collections as remote (2.80 KB, patch)
2016-07-07 07:30 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2016-07-07 07:23:43 UTC
The widget for manipulating collections (ie. OrganizeCollectionView) is supposed to show the sources of remote collections in a separate column. This isn't working because of a typo and a logical error in the code.
Comment 1 Debarshi Ray 2016-07-07 07:30:25 UTC
Created attachment 330978 [details] [review]
organize-collection-view: Fix typo
Comment 2 Debarshi Ray 2016-07-07 07:30:53 UTC
Created attachment 330979 [details] [review]
organize-collection-view: Don't mark local collections as remote
Comment 3 Debarshi Ray 2016-07-07 21:30:58 UTC
From #photos on GIMPNet:

17:21 <rishi> abono_: uajain: rfonseca:  Does                                   
      https://bugzilla.gnome.org/show_bug.cgi?id=768500 look OK to you?
17:29 <rfonseca> rishi: yes, looks ok. I don't have any remote collections, so  
      I haven't tried it
18:04 <uajain> rishi: Looks good to me too. Tried by applying patches and       
      testing.