organize-collection-view: Fix typo

Fall out from a56c42478db7b0f1f727d2f0f4ebb6020badc5af

https://bugzilla.gnome.org/show_bug.cgi?id=768500